--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,22 @@
+* {
+    box-sizing: border-box;
+}
 body{
 background-color: black;
+color: aliceblue;
 }
 
+.results{
+    color: azure;
+    text-align: center;
+    font-size: 28px;
+    border: 2px solid wheat;
+}
+
+.results p {
+    border: 1px solid gold;
+    display: inline-block;
+}
 
 
 button {
@@ -22,7 +37,7 @@ button:hover {
     font-weight: bolder;
 }
 
-div {
+.button-display {
     display: flex;
     justify-content: center;
 }
@@ -32,4 +47,9 @@ h1 {
     text-align: center;
     margin-top: 15%;
     text-decoration: underline;
+}
+
+h2 {
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
